# helloasso2kalisport

./: .gitignore  AGENTS.md  README.md
backend/: Cargo.toml
backend/src/: app.rs  helloasso.rs  main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  frontend.rs  lib.rs  main.rs  routes.rs
frontend/src/pages/: hello_asso.rs  home.rs  mod.rs  saison.rs
frontend/static/: index.html  style.css
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
