[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
jsonwebtoken = "9"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
shared = { path = "../shared" }
tower = "0.4"
tower-cookies = "0.10"
