[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_qs = "0.13.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
csv = "1.3.0"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
shared = { path = "../shared" }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15"
