[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yew-router = "0.18"
stylist = "0.13"
chrono = "0.4"
shared = { path = "../shared" }
wasm-bindgen = "0.2"
