[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
yew-router = "0.18.0"
stylist = "0.13.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
shared = { path = "../shared" }
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
